--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,44 @@
 }
 
 .timeline {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+
+  &-box {
+    display: flex;
+    width: 3px;
+    background-color: #2C85FF;
+    position: relative;
+
+  
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      height: 10px;
+      width: 10px;
+      background-color: #2C85FF;
+      left: -3px;
+      border-radius: 50%;
+    }
+  }
+
+  &-menu {
+    width: 100%;
+    display: flex;
+    margin-bottom: 2rem;
+  }
+
+  &-line {
+    width: 3px;
+    border-radius: 10px;
+    background-color: rgba(44, 133, 255, 0.4);
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+  }
+
   &-item {
     display: flex;
     width: 250px;
@@ -16,6 +54,7 @@
     box-shadow: 0 0 15px rgba(#000, 0.2);
     flex-direction: column;
     border-radius: 20px;
+    margin-left: 1rem;
 
     &-top {
       width: calc(100% - 40px);
@@ -95,6 +134,99 @@
           }
         }
       }
+    }
+  }
+
+  &-form {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &-box {
+      box-shadow: 0 0 15px rgba(#000, 0.2);
+      background-color: white;
+      padding: 2rem;
+      border-radius: 20px;
+      width: calc(400px - 4rem);
+      height: calc(450px - 4rem);
+      justify-content: space-around;
+      display: flex;
+      flex-direction: column;
+
+      .inputs-box {
+        display: flex;
+        flex-direction: column;
+
+        width: 100%;
+        margin: auto;
+
+        .input-box {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          margin-bottom: 1.5rem;
+
+          label {
+            font-size: 13px;
+            margin-bottom: 0.5rem;
+          }
+
+          input {
+            border-radius: 20px;
+            height: calc(45px - 2rem);
+            border: 2px solid #ECECEC;
+            outline: none;
+            padding: 1rem;
+            width: calc(100% - 2rem);
+            color: #ECECEC;
+
+            &::placeholder {
+              color: #ECECEC;
+            }
+          }
+
+        }
+      }
+
+      .buttons-box {
+        display: flex;
+        width: 100%;
+
+        button {
+          display: flex;
+          width: 100%;
+          border-radius: 20px;
+          padding: 15px 20px;
+          outline: none;
+          border: none;
+          background-color: #2C85FF;
+          color: white;
+          align-items: center;
+          justify-content: center;
+          cursor: pointer;
+          transition: 0.5s all;
+
+          &:hover {
+            background-color: white;
+            color: #2C85FF;
+            border: 1px solid #2C85FF;
+            transform: scale(0.9);
+          }
+
+          &:first-of-type {
+            margin-right: 1rem;
+          }
+
+          &:last-of-type {
+            background-color: white;
+            color: #2C85FF;
+          }
+        }
+      }
+
+
     }
   }
 }
