removeAllTimeline after setRunTarget + deleteTimelineItem

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,18 +7,62 @@
   font-family: "Poppins", sans-serif;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .timeline {
   display: flex;
   width: 100%;
   flex-direction: column;
+  padding-bottom: 2rem;
 
-  &-box {
+  &-box-item {
     display: flex;
     width: 3px;
     background-color: #2C85FF;
-    position: relative;
 
-  
+
+    &-target-done {
+      .timeline-item-top {
+        background-color: #ffb52c;
+      }
+
+      .timeline-item-main-bottom {
+        .distance-box {
+          background-color: #ffb52c;
+        }
+      }
+
+    }
+
+    &-left {
+      flex-direction: row-reverse;
+
+      .timeline-box-date {
+        align-items: flex-start;
+        display: flex;
+        width: 100px;
+        height: 120px;
+
+
+      }
+    }
+
+    &-right {
+      .timeline-box-date {
+        align-items: flex-end;
+        display: flex;
+        width: 100px;
+        height: 120px;
+
+
+      }
+    }
+
+
     &::after {
       position: absolute;
       content: '';
@@ -31,10 +75,66 @@
     }
   }
 
+  &-box {
+    display: flex;
+  }
+
   &-menu {
-    width: 100%;
+    width: calc(100% - 2rem);
     display: flex;
     margin-bottom: 2rem;
+    padding: 1rem;
+    justify-content: space-around;
+    box-shadow: 0 0 15px rgba(#000, 0.2);
+    background-color: white;
+
+    &-input-box {
+      display: flex;
+      align-items: center;
+
+
+      input {
+        width: calc(100% - .5rem);
+        outline: none;
+        border: 2px solid #ECECEC;
+        border-radius: 20px;
+        height: 30px;
+        color: #2C85FF;
+        margin-bottom: 1rem;
+        padding-left: .5rem;
+        margin: auto;
+
+      }
+
+      button {
+        width: 100%;
+        margin-left: 1rem;
+      }
+
+    }
+
+    button {
+
+      outline: none;
+      color: white;
+      background-color: #2C85FF;
+      border-radius: 20px;
+      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 5px 20px;
+
+      cursor: pointer;
+      transition: .5s all;
+
+      &:hover {
+        border: 1px solid #2C85FF;
+        color: #2C85FF;
+        background-color: white;
+      }
+
+    }
   }
 
   &-line {
@@ -44,12 +144,14 @@
     display: flex;
     margin: auto;
     flex-direction: column;
+    position: relative;
   }
 
   &-item {
     display: flex;
-    width: 250px;
+    min-width: 200px;
     min-height: 120px;
+    max-height: 120px;
     background-color: white;
     box-shadow: 0 0 15px rgba(#000, 0.2);
     flex-direction: column;
@@ -63,25 +165,24 @@
       border-radius: 20px 20px 0 0;
       align-items: center;
       display: flex;
+      justify-content: space-between;
 
 
-      .date-box {
-        display: flex;
-        width: 100%;
-        align-items: center;
-
-        i {
-          margin-right: 1rem;
-          font-size: 1rem;
-          color: white;
-        }
-
-        p {
-          color: white;
-          font-size: 1rem;
-        }
+      &-index {
+        color: white;
+        font-size: 13px;
       }
 
+      i {
+        font-size: 1.2rem;
+        color: white;
+        cursor: pointer;
+        transition: .5s all;
+
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
     }
 
     &-main {
