--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,45 +23,34 @@ input[type=number]::-webkit-outer-spin-button {
     display: flex;
     width: 3px;
     background-color: #2C85FF;
-
+    position: relative;
+    align-items: flex-end;
 
     &-target-done {
-      .timeline-item-top {
-        background-color: #ffb52c;
+      background-color: #ffb52c;
+
+      &::after {
+
+        background-color: #ffb52c !important;
+
       }
 
-      .timeline-item-main-bottom {
-        .distance-box {
-          background-color: #ffb52c;
+      .timeline-item {
+        h3, i {
+          color: #ffb52c;
         }
       }
+
 
     }
 
     &-left {
       flex-direction: row-reverse;
 
-      .timeline-box-date {
-        align-items: flex-start;
-        display: flex;
-        width: 100px;
-        height: 120px;
-
-
+      .timeline-item {
+        margin-right: 1rem;
       }
     }
-
-    &-right {
-      .timeline-box-date {
-        align-items: flex-end;
-        display: flex;
-        width: 100px;
-        height: 120px;
-
-
-      }
-    }
-
 
     &::after {
       position: absolute;
@@ -75,9 +64,6 @@ input[type=number]::-webkit-outer-spin-button {
     }
   }
 
-  &-box {
-    display: flex;
-  }
 
   &-menu {
     width: calc(100% - 2rem);
@@ -111,6 +97,18 @@ input[type=number]::-webkit-outer-spin-button {
         margin-left: 1rem;
       }
 
+    }
+
+    .complete-run-target-alert {
+      display: none;
+
+      &--active {
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+        color: #ffb52c;
+
+      }
     }
 
     button {
@@ -149,93 +147,66 @@ input[type=number]::-webkit-outer-spin-button {
 
   &-item {
     display: flex;
-    min-width: 200px;
-    min-height: 120px;
-    max-height: 120px;
+    min-width: 300px;
+    max-height: 70px;
+    min-height: 70px;
+    position: relative;
     background-color: white;
     box-shadow: 0 0 15px rgba(#000, 0.2);
-    flex-direction: column;
-    border-radius: 20px;
     margin-left: 1rem;
+    align-items: center;
+    border-radius: 10px;
 
-    &-top {
-      width: calc(100% - 40px);
-      background-color: #2C85FF;
-      padding: 10px 20px;
-      border-radius: 20px 20px 0 0;
-      align-items: center;
+
+    &-date-box {
       display: flex;
-      justify-content: space-between;
+      width: calc(80px - 20px);
+      height: 70px;
+      padding: 0 10px;
+      border-right: 1px solid #ECECEC;
+      align-items: center;
+      text-align: center;
 
-
-      &-index {
-        color: white;
+      p {
         font-size: 13px;
-      }
-
-      i {
-        font-size: 1.2rem;
-        color: white;
-        cursor: pointer;
-        transition: .5s all;
-
-        &:hover {
-          transform: scale(1.1);
-        }
+        color: #8c8888;
       }
     }
 
-    &-main {
-      width: calc(100% - 40px);
-      padding: 10px 20px;
+    &-info-box {
       display: flex;
       flex-direction: column;
+      justify-content: space-around;
+      padding: 0 20px;
 
-      &-top {
-        width: 100%;
+      h3 {
+        font-size: 1rem;
+        color: #2C85FF;
+      }
+
+      &-other-information {
         display: flex;
-        justify-content: space-between;
-        margin-bottom: .5rem;
+        margin-top: -.3rem;
 
-        &-item {
-          width: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-
-          i {
-            margin-right: .2rem;
-            font-size: 1.2rem;
-          }
+        p {
+          font-size: 13px;
+          color: #8c8888;
         }
       }
 
-      &-bottom {
-        display: flex;
-        width: 100%;
+    }
 
-        .distance-box {
-          width: 100%;
-          background-color: #2C85FF;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          padding: 0;
-          border-radius: 20px;
+    i {
+      margin-left: 1rem;
+      cursor: pointer;
+      color: #2C85FF;
+      transition: .5s all;
 
-          i, p {
-
-            color: white;
-            font-weight: 500;
-          }
-
-          i {
-            font-size: 1.2rem;
-            margin-right: 0.2rem;
-          }
-        }
+      &:hover {
+        transform: scale(1.3);
       }
     }
+
   }
 
   &-form {
